Fix horizontal scrolling in GEM applications
The footer is as wide as the page but its container has vertical padding. Use negative margins to compensate.

--- a/gembase/html/css/gemwebapp.css
+++ b/gembase/html/css/gemwebapp.css
@@ -2,3 +2,6 @@
 .gem-footer, .gem-push {
     height: 142px; /* .push must be the same height as .footer */
 }
+.gem-footer {
+    margin: 0 -20px;
+}
